2004-01-29  Stefan Jahn  <stefan@lkcc.org>

	* paintings/Makefile.am, diagrams/Makefile.am,
	components/Makefile.am (INCLUDES): Fixed include path for
	X headers and Qt headers.

2004-01-21  Stefan Jahn  <stefan@lkcc.org>

	* fileshowdialog.cpp, settingsdialog.cpp: Added translatable 
	strings.

	* Makefile.am (TRANSLATIONS): Adjusted paths for translation 
	files to make 'make distcheck' working again.

2004-01-19  Stefan Jahn  <stefan@lkcc.org>

	* helpdialog.cpp (HelpDialog): Added a FIXME.  Possible use
	of translated documentation.

	* docs/Makefile.am, docs/en/Makefile.am: Corrected these.
	Made documentation installable.

	* Makefile.am (SUBDIRS): Added docs sub directory and fixed
	Michael's additions.

2004-01-14  Stefan Jahn  <stefan@lkcc.org>

	* qucsdoc.cpp (loadComponents): Added gyrator and phaseshifter
	to the list of loadable components.

2003-11-29  Stefan Jahn  <stefan@lkcc.org>

	* bitmaps/Makefile.am (picdatadir): Adjusted installation path
	of bitmaps.

	* qucsdoc.cpp (QucsDoc): Made much more string representations
	translatable.

	* qucs.cpp (initActions): Remove "bitmaps/" from hardcoded
	bitmap locations.  BITMAPDIR now contains the full-qualified
	location.
	Made much more string representations translatable.

	* main.cpp (main): Using LANGUAGEDIR instead of ".".

	* Makefile.am (langdata_DATA): Added translation installation
	path.

2003-10-30  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* qucsdoc.cpp, qucs.cpp: Using BITMAPDIR definition from
	<config.h>.

	* ChangeLog: Created this file.