@@ -1,3 +1,9 @@
+2004-02-03  Stefan Jahn  <stefan@lkcc.org>
+
+	* newprojdialog.cpp (NewProjDialog): For some reason tr() 
+	strings were not really translatable, thus I changed them into
+	QObject::tr() strings.  These are now translatable.
+
 2004-01-29  Stefan Jahn  <stefan@lkcc.org>
 
 	* paintings/Makefile.am, diagrams/Makefile.am,
